[project]
name = "edspdf-poppler"
description = "Poppler extension for EDS-PDF"
authors = [
    { name = "Perceval Wajsbürt", email = "perceval.wajsburt-ext@aphp.fr" },
]
license = { file = "LICENSE" }
readme = "README.md"
urls.homepage = "https://github.com/aphp/edspdf-poppler/"
urls.repository = "https://github.com/aphp/edspdf-poppler/"
urls.documentation = "https://aphp.github.io/edspdf-poppler/"
dynamic = ["version"]
requires-python = ">=3.7,<4.0"

dependencies = [
    "edspdf>=0.7.0",
    "six>=1.16.0",
    "attrs>=23.1.0"
]

[project.optional-dependencies]
dev = [
    "pre-commit~=2.18.1",
    "pytest~=7.1.1",
    "pytest-cov~=3.0.0",
]
docs = [
    "mike~=1.1.2",
    "mkdocs@git+https://github.com/mkdocs/mkdocs.git@5af8bd30538ff8f0cfb698c8b90c3020da319f92",
    "mkdocstrings@git+https://github.com/percevalw/mkdocstrings.git@7c50413ebdffdcbfad40b69d1574f55ba4f88a5c",
    "mkdocs-autorefs@git+https://github.com/percevalw/mkdocs-autorefs.git@0652a0031a5402c5abcbac8cf1e846fcadbbacbc",
    "mkdocs-material~=9.1.0",
    "mkdocstrings-python~=0.8.3",
    "mkdocs-autorefs~=0.4.1",
]


[project.entry-points."edspdf_factories"]
# Extractors
"poppler-extractor" = "edspdf_poppler:PopplerExtractor"

[tool.setuptools.dynamic]
version = { attr = "edspdf_poppler.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["edspdf_poppler*"]
namespaces = false

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 10
exclude = ["docs", "build", "tests"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false

[tool.coverage]
exclude_lines = [
    "raise NotImplementedError",
    "def __repr__",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.mypy]
plugins = "pydantic.mypy"

[tool.ruff]
fix = true
exclude = [
    ".git",
    "__pycache__",
    "__init__.py",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    "build",
]
ignore = []
line-length = 88
select = [
    "E",
    "F",
    "W",
    "I001"
]
fixable = ["E", "F", "W", "I"]

[tool.ruff.isort]
known-first-party = ["edspdf"]

[tool.coverage.run]
omit = ["*edspdf_poppler/poppler_src*"]

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cython",
]
build-backend = "setuptools.build_meta"
